# FERI

./: README.md
Algorithms and Data structures/Naloga10/: Source.cpp  grafBig.txt
Algorithms and Data structures/Naloga3/: Source.cpp
Algorithms and Data structures/Naloga4/: Source.cpp
Algorithms and Data structures/Naloga5/: Source.cpp
Algorithms and Data structures/Naloga6/: Source.cpp
Algorithms and Data structures/Naloga7/: Source.cpp
Algorithms and Data structures/Naloga8/: Source.cpp
Algorithms and Data structures/Naloga9/: Source.cpp
Algorithms/Homework1/: Source.cpp
Algorithms/Homework2/: Source.cpp
Algorithms/Naloga1/: Vaja1.cpp  vhod.txt
Algorithms/Naloga2/: Source.cpp  out.txt  vhod.txt
Computer architecture/RV3 UTF8/: CMakeLists.txt  README.md  main.cpp
Computer architecture/rv4_RA/: README.md  hello  hello.cpp  hello.s  rv4.asm
Computer architecture/rv5_RA/: README.md  for  for.asm
Computer architecture/rv6_RA/: README.md  div  div.asm
Computer architecture/rv7_RA/: README.md  min3  min3.asm
Database/1. ER Model/: Navodila.txt
Database/2. Convert ER To DB/: sql.sql
Database/3. SQL statements/: sqlStatemens.sql
Database/4. Trigger and Transaction/: triggerandTransaction.sql
Grid-oriented computing/Server-Client/: README.md  TCPSockets.sln
ProgrammingII/Naloga1101/: Address.cpp  Address.h  CMakeLists.txt  Date.cpp  Date.h  Student.cpp  Student.h  UnparseableDateException.cpp  UnparseableDateException.h  WrongPhoneNumberException.cpp  WrongPhoneNumberException.h  naloga1101.cpp  students.csv
(+182 files in other folders)
